2001-11-24  Martin Weber <martweb@gmx.net>

	* output-epd.c (out_splines): Fix a 
	bugs in output formats.
	"*U"->"h", "B"->"S".
	Divied each color components by 255.
	(Message-ID: <3BFD3CA5.EA11A99C@gmx.net>).
	
2001-11-24  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (output_src): Added output-epd.[ch].

2001-11-21  Martin Weber <martweb@gmx.net>

	* output-epd.[ch]: New files.

	* output.c (output_formats): output_epd_writer is added.

	(Message-ID: <3BFC27DC.DE9DE0E7@gmx.net>)
	
2001-11-21  Martin Weber <martweb@gmx.net>

	* output.h (OUTPUT_SUFFIX_LIST): Removed dxf12.
	Added epd.

	* input-magick.h: Include ptypes.h

	* autotrace.dsp: Updated.

	(Message-ID: <3BFC1CA5.996CD642@gmx.net>)
	
2001-11-21  Martin Weber <martweb@gmx.net>

	* READM, THANKS, NEWS: Updated.
	(Message-ID: <3BFBEB8D.E493F888@gmx.net>)
	
2001-11-21  Masatake YAMATO  <yamato@redhat.com>

	* main.c (main): Set fitting_opts->centerline.

	* fit.c (fitted_splines, new_fitting_opts): set value for
	new field `centerline'.
	
	* autotrace.[ch] (at_centerline):  removed.
	(struct _at_spline_list_array_type, struct _at_fitting_opts_type): 
	new field `centerline' is added. 

	* output-*.[ch]: at_centerline is removed.
	Use shape.centerline instead.

2001-11-21  Masatake YAMATO  <yamato@redhat.com>

	* ptypes.h: New file.

	* Makefile.am: Added ptypes.h.
	
	* types.h: Added "at_" as prefix to all type names.

	* *.[ch]: Include ptypes.h.

2001-11-19  Martin Weber  <martweb@gmx.net>

	* pxl-outline.c (find_one_outline): Fixed that sometimes the first 
	point of the outline is wrong 

2001-11-19  Dan Mills <dmills@spamblock.demon.co.uk>

	* fit.c (split_at_corners): 
	 Here is a patch for another autotrace bug which caused some images
	 to seemingly hang when processed with the thin option.

	 The problem was caused by the fact that the LHS of the if statement
	 was evaluated as an unsigned value, thus when pixel_o == 1, the
	 statement evaluates as if (((unsigned int)(-1)) >= 4) which comes